create github pages

--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                 <div class="card-wrapper">
                     <div class="card-img">
                         <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="217" width="289.3333333333333" alt="Mobirise">
-                            <a href="page3.html"></a>
+                            <a href="Traditional.html"></a>
                         </amp-img>
                     </div>
                     <div class="card-box">
