--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
                 <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2">Technological Innovation and Entrepreneurship Space&nbsp;</h3>
-                <p class="mbr-text mbr-fonts-style display-7">TIES is an innovation maker space that was established in South Campus in 2015 to support the TIE program. Funding from a University SEED grant was provided to install rapid prototyping machines, a CNC mill, laser cutter, and other equipment to support the "making" of prototypes.&nbsp;</p>
+                <p class="mbr-text mbr-fonts-style display-7">TIES is an innovative space, established in the South part of Campus in 2015 to support the TIE program. Funding from a University SEED grant was provided to install rapid prototyping machines, a CNC mill, laser cutter, and other equipment to support the "making" of prototypes.&nbsp;</p>
             </div>
         </div>
     </div>
